# gestione-colf

./: .coverage  .coveragerc  .env.example  .gitignore  AGENTS(Conflicted copy 2026-07-23 from NAD-9-TARO).md  AGENTS.md  GESTIONE.bat  HistoricalContrattoLavoro.md  PIANO_SVILUPPO.md  README.md  applicazione.txt  coverage.xml  desktop.ini  pyproject.toml  requirements.txt  requirements.txt.bak  setup_venv.bat
.github/scripts/: coverage_comment.py
.github/workflows/: ci.yml
PAGHE_COLF_BACKUP/: backup_1_20260616_173310.json  backup_1_20260618_073048.json  backup_1_20260628_143733.json  backup_1_20260719_122955.json
PAGHE_COLF_BACKUP/feature_ctrlk/: _dashboard.py.bak  base.html.bak
backup_20260705_093209/: .env.bak  settings.py.bak
core/: audit_middleware.py  csp_middleware.py  db_middleware.py  settings.py  settings.py.bak2  settings.py.bak3  urls.py  urls.py.bak  urls.py.bak3  urls_bak.py
data/: coordinate_beneficiari.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
loghi_studio/: LOGO_.psd
paghe/: _crypto.py  admin.py  apps.py  apps.py.bak  auth_backends.py  automation.py  automation.py.bak  automation_playwright.py  automation_playwright.py.backup  automation_playwright.py.bak  context_processors.py  context_processors.py.bak  decorators.py  field_browser.py  field_resolver.py  fields.py  forms.py  models.py  notifiche_scadenze.py  permessi.py  signals.py  signals.py.bak  urls(Conflicted copy 2026-07-23 from NAD-9-TARO).py  urls.py  urls_mobile.py  views.py.backup2  views.py.pre_roboto
paghe/api/: auth.py  urls.py  (+3 more)
templates/: base.html  base.html.bak
(+370 files in other folders)
