[project]
name = "gestione_colf"
version = "1.0.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "SIM"]
ignore = ["E501", "E741", "F403", "F405", "I001", "E402", "E401", "E702", "E701", "N806", "SIM108", "SIM115", "F541", "UP031", "UP032", "E731", "N812", "F823", "SIM102", "SIM117", "N814", "N802"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E", "F", "I", "N", "UP", "SIM"]
"*/tests/*" = ["E", "F", "I", "N", "UP", "SIM"]
"paghe/views/_common_imports.py" = ["F401"]
"paghe/views/_helpers.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.coverage.run]
source = ["paghe", "core"]
omit = ["*/migrations/*", "*/tests/*", "paghe/api/*", "paghe/automation*.py"]
